--- a/opentrends-service/Dockerfile
+++ b/opentrends-service/Dockerfile
@@ -1,5 +1,6 @@
-FROM openjdk:17
-
-COPY target/*.jar app.jar
-
+FROM eclipse-temurin:17-jdk-alpine
+VOLUME /tmp
+COPY ./target/opentrends-service-0.0.1-SNAPSHOT.jar app.jar
+ARG JAR_FILE=target/*.jar
+EXPOSE 9090
 ENTRYPOINT ["java","-jar","/app.jar"]
