--- a/opentrends-service/.gitlab-ci.yml
+++ b/opentrends-service/.gitlab-ci.yml
@@ -8,8 +8,17 @@ variables:
 
 stages:
   - build
-  - package
-  - deploy
+  - test
+
+job_build:
+  stage: build
+  script:
+    - echo "Building the project"
+
+job_test:
+  stage: test
+  script:
+    - echo "Running tests"
 
 maven-build:
   image: maven:3-jdk-8
